# bazel_example_generated_srcjar

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
com/example/: BUILD.bazel  Main.java
com/example/javabin/: BUILD.bazel  Main.java  README.md
com/example/javalib/: BUILD.bazel  Main.java  README.md
com/example/kotlin/: BUILD.bazel  Main.kt  README.md
com/kexample/: BUILD.bazel  Main.kt
rules/: fake_javainfo.bzl  generate_srcjar.bzl
