###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel-example-generated-srcjar",
    repo_name = "bazel-example-generated-srcjar",
)

bazel_dep(
    name = "rules_kotlin",
    version = "1.9.0",
)
