load("//rules:generate_srcjar.bzl", "generate_srcjar_kt")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("//rules:fake_javainfo.bzl", "fake_javainfo")

filegroup(
    name = "real_sources",
    srcs = ["Main.kt"],
)

generate_srcjar_kt(
    name = "generated_sources_kotlin",
    class_name = "KotlinExample",
    package = "com.example.kotlin",
)

fake_javainfo(
    name = "fake_javainfo",
    srcjar = ":generated_sources_kotlin",
)

###
# kt_jvm_library + java_binary do not provide info for the IDE
kt_jvm_library(
    name = "example_lib",
    srcs = [
        ":generated_sources_kotlin",
        ":real_sources",
    ],
)

java_binary(
    name = "example",
    srcs = [],
    main_class = "com.example.kotlin.MainKt",
    runtime_deps = [
        ":example_lib",
    ],
    deps = [],
)

###
# kt_jvm_binary doesn't provide info for the IDE

kt_jvm_binary(
    name = "example_ktbin",
    srcs = [
        ":generated_sources_kotlin",
        ":real_sources",
    ],
    main_class = "com.example.kotlin.MainKt",
)
